<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/fondo"
    tools:context=".InicioDeSesionActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/forma_1" />


    <EditText

        android:id="@+id/email_login"
        android:layout_width="285dp"
        android:layout_height="48dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="252dp"
        android:background="@color/azul_Medio"
        android:backgroundTint="@color/Gris"
        android:ems="10"
        android:fontFamily="@font/raleway_bold"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingLeft="20dp"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password_login"
        android:layout_width="285dp"
        android:layout_height="48dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="304dp"
        android:background="@color/azul_Medio"
        android:backgroundTint="@color/Gris"
        android:ems="10"
        android:fontFamily="@font/raleway_bold"
        android:hint="@string/conrtraseña"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="155dp"
        android:layout_marginTop="224dp"
        android:fontFamily="@font/raleway_medium"
        android:text="@string/bienvenido"
        android:textColor="@color/azul_Oscuro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="364dp"
        android:text="@string/advertencia_2"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:fontFamily="@font/raleway_light" />

    <ImageView
        android:id="@+id/btn_comp"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="180dp"
        android:layout_marginTop="416dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/huella_dactilar" />

    <Button
        android:id="@+id/boton_login"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="588dp"
        android:backgroundTint="@color/azul_Claro"
        android:fontFamily="@font/raleway_bold"
        android:text="@string/btn_Iniciar"
        android:textColor="@color/Blanco"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView23"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="140dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/circulo_azul" />


    <ImageView
        android:id="@+id/imageView24"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="165dp"
        android:layout_marginTop="145dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/circulo_de_usuario" />


</androidx.constraintlayout.widget.ConstraintLayout>